feat: add user-login and jwt
